--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -17,3 +17,5 @@ management.endpoints.web.exposure.include=*
 # Enable Kubernetes Probes.
 # This exposes the following endpoints: /actuator/health/{live,readi}ness
 management.endpoint.health.probes.enabled=true
+
+csm.event-publisher=in-process
